--- a/Main.Rmd
+++ b/Main.Rmd
@@ -21,11 +21,12 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE)
 # Topic and Scope
 In the digital era electronic devices have become indispensable. From our smartphone to our electronic washing machine, all our lives virtually depend on these little helpers. However at the core of all this transition lies the computer, which nowadays is the most important tool for getting work done. Almost no job can be executed properly without one. Long gone are the days of big, heavy stay at home computers, modern portable laptops are dominating the entire landscape. With these thoughts at hand it is time to dig a little bit deeper, into the different companies that build these marvelous devices and analyze what criteria determine their price and performance.
 
-Therefore we collected data reflecting roughly 900 different models of the recent years with their hardware configuration and manufacturer information. Since it is quite difficult to compare models utilizing different components, we extended the given information by recognized CPU and GPU benchmarks, rating each component for its performance. In order to improve readability and understanding of these metrics, which are usually in a specific scale, chosen by the benchmarking system, we scaled and converted these metrics to a range of 1 to 100, where 100 is the best possible result a hardware component can achieve. Moreover we combined the two main rating scores for CPU and GPU units to a new metric, which qualifies the overall laptop hardware performance on a range from 1 to 100 respectively.
+We collected data reflecting roughly 900 different models of the recent years with their hardware configuration and manufacturer information. Since it is quite difficult to compare models utilizing different components, we extended the given information by recognized CPU and GPU benchmarks, rating each component for its performance. In order to improve readability and understanding of these metrics, which are usually in a specific scale chosen by the benchmarking system, we scaled and converted these metrics to a range of 1 to 100, where 100 is the best possible result a hardware component can achieve. Moreover we combined the two main rating scores for CPU and GPU units to a new metric, which qualifies the overall laptop hardware performance on a range from 1 to 100 respectively.
 
-Note: To simplify the readability of this document the main pre-processing is done in a separate file, called "Data Processing.py". We have used python for this task, because on the one hand integrating both languages posed a technical challenge, which was interesting to solve, thus exploring and learning about the reticulate package. On the other hand pythons more programming oriented approach was very helpful when thinking on object-oriented terms, using functions and specific python libraries.
+Note: To simplify the readability of this document the main pre-processing is done in a separate file, called "Data Processing.py". We have used python for this task, because on the one hand integrating both languages posed a technical challenge, which was interesting to solve, thus exploring and learning about the reticulate package. On the other hand, pythons more programming oriented approach was very helpful when thinking on object-oriented terms, using functions and specific python libraries.
 
 Note: All necessary files are provided within this GitHub Repository. The used datasets were obtained from kaggle.com under the following links:
+
 * Laptop Prices: https://www.kaggle.com/datasets/ionaskel/laptop-prices
 * Rating of Intel and AMD processors: https://www.kaggle.com/datasets/fiftin/intel-and-amd-processors
 * GPU Benchmarks Compilation: https://www.kaggle.com/datasets/alanjo/gpu-benchmarks
@@ -90,14 +91,14 @@ df$combinations = paste0(df$Cpu,'\n',df$Gpu)
 ```
 
 
-Although Pre-processing is done in python we will create the main metrics used in this analysis in r, since it is easier to use the functions provided in r for this task once the dataset is pre-processed.
+Although pre-processing is done in python we will create the main metrics used in this analysis in R, since it is easier to use the functions provided in R for this task once the dataset is pre-processed.
 
 
 ```{r}
 #Main Theme object and colors
 
 size <- 15
-theme <- theme_bw(base_size = 15) + theme(plot.title = element_text(hjust = 0.5, size = 22, color="black"),  plot.title.position = 'panel', text = element_text(size = size, color="black"), 
+theme <- theme_bw(base_size = 15) + theme(plot.title = element_text(hjust = 0.5, size = 20, color="black"),  plot.title.position = 'panel', text = element_text(size = size, color="black"), 
                             axis.text.x = element_text(size = size, color="black"),  axis.text.y = element_text(size = size, color="black"),  
                             axis.title.y = element_text(size = size, color="black"),  axis.title.x = element_text(size = size, color="black"), 
                             legend.title=element_text(size = size, color="black"), legend.text=element_text(size = size, color="black")) 
@@ -170,13 +171,13 @@ data %>%
 
 ```
 
-Taking this observation one step further we now look at the total ranking score of both metrics combined. We want to investigate the overall trend of the ranking score on the price, thereby cross validating the stability of our results. We divide the ranking score in bins ranging from 1-10, representing one category of similar devices when measured in performance. Looking at the second diagram, we can see, that with rising ranking score group the price of devices increases. However the displayed curve reveals, that for the first 4 ranking groups increase in price is only marginal, only after group 5 can we note a step increase in price with rising performance. This supports our initial finding: buying a cheap laptop is not always the best choice. There is a threshold up to which extra performance comes with little cost, although as shown in figure 1 this is mainly true for extra CPU performance. Moreover looking at the confidence interval of price in our calculated ranking groups, we can notice a fluctuation of roughly 300 euro which is quite similar throughout all our groups. This means, that the found trend and the recognition of a performance ~ price optimum is quite stable, since deviation does not alter much throughout the groups. Nevertheless the deviation value itself is quite large per group, which shows, that especially for lower prices very good offers exist. Note: One ranking score group is missing, which indicates that not sufficient data points exist for this category. This problem could be motivated by collecting more data or binning differently, however it might as well be, that laptops of this performance rank are very scarce. This needs further investigation.
+Taking this observation one step further we now look at the total ranking score of both metrics combined. We want to investigate the overall trend of the ranking score on the price, thereby cross validating the stability of our results. We divide the ranking score in bins ranging from 1-10, representing one category of similar devices when measured in performance. Looking at the second diagram, we can see, that with rising ranking score group the price of devices increases. However the displayed curve reveals, that for the first 4 ranking groups increase in price is only marginal, only after group 5 can we note a steep increase in price with rising performance. This supports our initial finding: buying a cheap laptop is not always the best choice. There is a threshold up to which extra performance comes with little cost, although as shown in figure 1 this is mainly true for extra CPU performance. Moreover looking at the confidence interval of price in our calculated ranking groups, we can notice a fluctuation of roughly 300 euro which is quite similar throughout all our groups. This means, that the found trend and the recognition of a performance ~ price optimum is quite stable, since deviation does not alter much throughout the groups. Nevertheless the deviation value itself is quite large per group, which shows, that especially for lower prices very good offers exist. Note: One ranking score group is missing, which indicates that not sufficient data points exist for this category. This problem could be mitigated by collecting more data or binning differently, however it might as well be, that laptops of this performance rank are very scarce. This needs further investigation.
 
 # Finding the right CPU and GPU
 
 ## Investigating CPUs
 
-Knowing now that there exists an optimum when buying a laptop the logical question of the intrigued buyer will be: "How do I recognize this sweet spot? Which CPU / GPU should I know buy?" To answer this question we want to investigate the most common CPUs and GPUs in laptops and see which of them display the best price-performance ratio. Therefore we introduce a new metric: price-performance ratio, this metric tells us how much one point of standardized performance (1-100) will cost us with a specific device.
+Knowing now that there exists an optimum when buying a laptop, the logical question of the intrigued buyer will be: "How do I recognize this sweet spot? Which CPU / GPU should I now buy?" To answer this question, we want to investigate the most common CPUs and GPUs in laptops and see, which of them display the best price-performance ratio. Therefore we introduce a new metric: price-performance ratio, this metric tells us how much one point of standardized performance (1-100) will cost us with a specific device.
 
 ```{r, fig.width=14, fig.height=9}
 topn <- 10
@@ -202,7 +203,7 @@ dataCPU %>%  ggplot(aes(x=Cpu, y=percentage, fill=meanPricePerformance)) +
 ```
 
 
-Turning first to CPUs, we can see in figure 3, the top 10 most used CPUs in laptops ranked by their occurence. The color indicates the price-performance ratio, with green being the least amount of euros spent for one score point of performance. It is easy to see, that the first 3 CPUs make up almost half of the entire distribution. This means that most laptops bought will have one of these 3 CPUs. Taking a closer look at the results we can observe, that when it comes to energy efficient CPUs, labeled with the index "U" i5 CPUs are always better in terms of price-performance ratio than i7 CPUs (roughly 35 euro/point for i5 7200U vs about 85 euro/point for i7 7500U). However high performance CPUs, labeled with an "HQ" suffix are the best choice in terms of price-performance ratio (25 euro/point for i7 7700 HQ). Therefore if a new laptop is considered always look out for high performance series CPU. If battery is of the essence, i5 should be chosen over i7.
+Turning first to CPUs, we can see in figure 3, the top 10 most used CPUs in laptops ranked by their occurence. The color indicates the price-performance ratio, with green being the least amount of euros spent for one score point. It is easy to see, that the first 3 CPUs make up almost half of the entire distribution. This means, that most laptops bought, will have one of these 3 CPUs. Taking a closer look at the results we can observe, that when it comes to energy efficient CPUs, labeled with the index "U", i5 CPUs are always better in terms of price-performance ratio than i7 CPUs (roughly 35 euro/point for i5 7200U vs about 85 euro/point for i7 7500U). However high performance CPUs, labeled with an "HQ" suffix are the best choice in terms of price-performance ratio (25 euro/point for i7 7700 HQ). Therefore if a new laptop is considered, it is worth looking out for high performance series CPU. If battery is of the essence, i5 should be chosen over i7.
 
 ## Investigating GPUs
 
@@ -226,9 +227,9 @@ dataGPU %>% ggplot(aes(x=Gpu, y=percentage, fill=meanPricePerformance)) +
 ```
 
 
-Turning now to GPU analysis, we can see the same kind of plot depicted for GPUs, with the color again indicating the price-performance ratio of a graphics card. It is interesting to note, that here once again the first couple of GPUs make up a large share of the overall cards available, the first 4 having roughly 60 % market share. However, the distribution is different, since Intel HD 620 GPUs take up more than 30 % by their own. Considering the price-performance ratio we can observe, that roughly 45 % of GPUs installed (being Intel HD 620 or Intel 520) are quite undesirable. The difference in naming for intels onboard GPUs is quite significant, since GPUS with the prefix "U" perform fairly well with Intel UHD 620 at roughly 25 euro/point, especially compared to their dominant sibling Intel HD 620 at about 90 euro/point. Moreover we can observe, that external GPUs like the Nvidia GeForce GTX series are much better in terms of price-performance ratio than their onboard intel competitors. Therefore when looking out for new Hardware two main things should be memorized when it comes to GPUs: Either look for external GPUs or examine closely which kind of GPU is installed on your device, it seems like manifacturers earn a great deal by selling two different types of onboard GPU with very similar naming.
+Turning now to GPU analysis, we can see the same kind of plot depicted for GPUs, with the color again indicating the price-performance ratio of a graphics card. It is interesting to note, that here once again the first couple of GPUs make up a large share of the overall cards available, the first 4 having roughly 60 % market share. However, the distribution is different, since Intel HD 620 GPUs take up more than 30 % by their own. Considering the price-performance ratio we can observe, that roughly 45 % of GPUs installed (being Intel HD 620 or Intel 520) are quite undesirable. The difference in naming of intels onboard GPUs is quite significant, since GPUS with the prefix "U" perform fairly well with Intel UHD 620 at roughly 25 euro/point, especially compared to their dominant sibling Intel HD 620 at about 90 euro/point. Moreover we can observe, that external GPUs like the Nvidia GeForce GTX series are much better in terms of price-performance ratio than their onboard intel competitors. Therefore when looking out for new hardware two main things should be memorized, when it comes to GPUs: Either look for external GPUs or examine closely which kind of GPU is installed on your device, it seems like manifacturers earn a great deal by selling two different types of onboard GPU with very similar naming.
 
-Using our results from these two analysis we can safely pose the question: Which is the Hardware combination which occurs most frequent in laptops sold and which of these combinationsa re now desirable, based on our knowledge?
+Using our results from these two analysis we can safely pose the question: Which is the Hardware combination which occurs most frequent in laptops sold and which of these combinationsa are now desirable, based on our knowledge?
 
 ## Bringing it all together: Investigating Hardware
 
@@ -259,7 +260,7 @@ data %>% ggplot(aes(x=combinations, y=percentage, fill=meanPricePerformance)) +
 ```
 
 
-Taking a look at figure 5 we can see, that the top hardware components, make up significantly less than 50% of all hardware installed. This indicates that although there are favorites when looking at the components separately, there is no standard selling configuration. Therefore the group "others" which denote all other possible configurations is a lot larger than when looking at the other two graphs (45.16 %). However turning to the top configuration with 15.24 % selling rate we can observe a mediocre price performance ratio of around 65 euro/point. Considering our results from before  we can explain this, by the usage of the Intel 620 HD which is quite bad in terms of ratio. Although the CPU is decent, the overall score gets diluted by the bad GPU. Turning to the second and third most sold configurations, the trend only strengthens with know less preferable CPUs and still undesirable GPUs the price performance ratio is more than 110 euro/point. However combinations of high performance CPus and external GPUs perform very good (< 30 euro/point) as is to be expected from their separate analysis. Moreover when used the UHD onboard GPU also yields a preferable ratio (< 30 euro/point).
+Taking a look at figure 5 we can see, that the top hardware components, make up significantly less than 50% of all hardware installed. This indicates that although there are favorites when looking at the components separately, there is no standard selling configuration. Therefore the group "others" which denote all other possible configurations is a lot larger than it has been with the other two graphs (45.16 %). However, turning to the top configuration with 15.24 % selling rate we can observe a mediocre price performance ratio of around 65 euro/point. Considering our results from before, we can explain this, by the usage of the Intel 620 HD which is quite bad in terms of ratio. Although the CPU is decent, the overall score gets diluted by the bad GPU. Turning to the second and third most sold configurations, the trend only strengthens: With now less preferable CPUs and still undesirable GPUs the price performance ratio is more than 110 euro/point. However combinations of high performance CPus and external GPUs perform very good (< 30 euro/point) as is to be expected from their separate analysis. Moreover, when used, the UHD onboard GPU also yields a preferable ratio (< 30 euro/point).
 
 Summing up this analysis we can say, that high performance CPUs appear with external GPUs which makes them a good buy. The same recommendation can be given out to i5 CPUs with UHD graphics. HD GPUs should be avoided at all costs, which could prove itself to be quite difficult since they seem to be found in devices most often.
 
@@ -269,7 +270,7 @@ Now that we have identified the best Hardware components, we want to take a look
 
 ```{r}
 size <- 28
-theme2 <- theme_bw(base_size = 15) + theme(plot.title = element_text(hjust = 0.5, size = size, color="black"),  plot.title.position = 'panel', text = element_text(size = size, color="black"), 
+theme2 <- theme_bw(base_size = 15) + theme(plot.title = element_text(hjust = 0.5, size = 35, color="black"),  plot.title.position = 'panel', text = element_text(size = size, color="black"), 
                             axis.text.x = element_text(size = size, color="black"),  axis.text.y = element_text(size = size, color="black"),  
                             axis.title.y = element_text(size = size, color="black"),  axis.title.x = element_text(size = size, color="black"), 
                             legend.title=element_text(size = size, color="black"), legend.text=element_text(size = size, color="black"), strip.text.x = element_text(size = size)) 
@@ -309,14 +310,14 @@ ggarrange(fig6,fig7)
 
 ```
 
-Investigating figure 6, we see all companies ranked by their price performance ratio, it is easy to see, that MSI is by far the best choice with regards to price performance with 25.4 euro/point. The second best choice is Acer, however the gap between to MSI is quite large, with Acer being at 54.45 euro/point. Coming in third by a close margin to Acer is Asus with 59.06 euro/point. All other companies have significantly higher values, with Toshiba being last.
+Investigating figure 6, we see all companies ranked by their price performance ratio. It is easy to see, that MSI is by far the best choice with regards to price performance with 25.4 euro/point. The second best choice is Acer, however the gap between the two is quite large, with Acer being at 54.45 euro/point. Coming in third by a close margin to Acer is Asus, with 59.06 euro/point. All other companies have significantly higher values, with Toshiba being last.
 
-Moving on to figure 7, we can observe, which price segments companies target, by comparing the density of a given graph to the price range. Starting off with MSI we can see, that it has high density in the area of roughly 1200 - 2500 euro. Taking into consideration its excellent price performance ratio, this shows, that MSI targets mainly customers who want very good performance but do not want to overspend on it. These laptops usually include high performance CPU and an external GPU, which as shown before is a very preferable combination in terms of price performance ratio. Nevertheless these components are not cheap to begin with, therefore the general price segment is fairly high situated. Acer on the other hand favors the low budget segment, indicated by its high density peak around 1000 euro. This suggests that Acer might use UHD GPUs and certainly installs the cheaper i5 CPUs. With regards to the other companies we can say, that their distribution also centers around cheaper laptops, still their plots are more spread out, indicating a broader targeting strategy.
+Moving on to figure 7, we can observe, which price segments companies target, by comparing the density of a given graph to the price range. Starting off with MSI we can see, that it has high density in the area of roughly 1200 - 2500 euro. Taking into consideration its excellent price performance ratio, this shows, that MSI targets mainly customers who want very good performance but do not want to overspend on it. These laptops usually include high performance CPU and an external GPU, which as shown before, is a very preferable combination in terms of price performance ratio. Nevertheless these components are not cheap to begin with, therefore the general price segment is fairly high situated. Acer on the other hand favors the low budget segment, indicated by its high density peak around 1000 euro. This suggests that Acer might use UHD GPUs and certainly installs the cheaper i5 CPUs. With regards to the other companies we can say, that their distribution also centers around cheaper laptops, still their plots are more spread out, indicating a broader targeting strategy.
 
 
 # Summary
 
-Summing up our results we can say, that we have analyzed the laptop landscape thoroughly and identified several key features for which one should look out, if the time has come to buy a new device. First and foremost performance does increase with price, however getting a good CPU is much easier and cheaper, than finding a decent GPU. Buyers how try to get the biggest bang for their buck should therefore look out for Intels UHD GPU series, since it is unrivaled in terms of its price performance ratio. In general if a light laptop with an energy efficient CPU is needed, i5 CPUs should be preferred, unless extra computing power is absolutely necessary. If a larger budget is available laptops with a high performance CPU (HQ) as well as with a dedicated GPU should be considered. Lastly when choosing a device with respect to the manufacturer, MSI is the best choice for greater investments that will last a long time, whereas Acer should be considered if pricing is key.
+Summing up our results we can say, that we have analyzed the laptop landscape thoroughly and identified several key features for which one should look out for, if the time has come to buy a new device. First and foremost performance does increase with price, however getting a good CPU is much easier and cheaper, than finding a decent GPU. Buyers who try to get "the biggest bang for their buck" should therefore look out for Intels UHD GPU series, since it is unrivaled in terms of its price performance ratio. In general if a light laptop with an energy efficient CPU is needed, i5 CPUs should be preferred, unless extra computing power is absolutely necessary. If a larger budget is available laptops with a high performance CPU (HQ) as well as with a dedicated GPU should be considered. Lastly, when choosing a device with respect to the manufacturer, MSI is the best choice for greater investments that will last a long time, whereas Acer should be considered if pricing is key.
 
 Note: Although this article offers a solid recommendation on which device to buy, several observations should be kept in mind: 
 Due to some difficulties with regards to data acquisition and preparation, not all major companies present in the market have been analyzed. Especially Apple devices which are quite popular, have been left out, due to insufficient data points. Moreover with regards to hardware specifications Intel is the dominating manufacturer, therefore most of this analysis has focused on its vast product lineup. However amd is becoming more dominant in recent time, therefore a follow up article with a detailed investigation of amd hardware is to be expected.
